--- a/question_3/input_2.config
+++ b/question_3/input_2.config
@@ -10,6 +10,17 @@ loops=5
 [job0.0]
 numjobs=1
 readwrite=randread
-bssplit=4K/30:16K/60:64K/10
+blocksize=4K
 filename=bench
 
+[job1.0]
+numjobs=1
+readwrite=randread
+blocksize=16K
+filename=bench
+
+[job2.0]
+numjobs=1
+readwrite=randread
+blocksize=64K
+filename=bench
