Question 3 - Added a plot for the lantencies in question 3 - Created a single file for the common plot parameters - Modifed the plotting scripts accordingly

--- a/question_3/input_perc.config
+++ b/question_3/input_perc.config
@@ -11,5 +11,8 @@ loops=5
 numjobs=1
 readwrite=randread
 bssplit=4K/30:16K/60:64K/10
+slat_percentiles=1
+clat_percentiles=1
+lat_percentiles=1
 filename=bench
 
